# rust-warp-realworld-backend

./: .env.example  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: app.rs  auth.rs  errors.rs  main.rs  response.rs  routes.rs
src/db/src/: connection.rs  lib.rs  repository.rs
src/handlers/: index.rs  mod.rs
src/handlers/articles/: delete.rs  favorite.rs  feed.rs  find.rs  insert.rs  list.rs  tags.rs  update.rs
src/handlers/comments/: create.rs  delete.rs  get.rs  responses.rs
src/handlers/profiles/: follow.rs  get.rs
src/handlers/users/: current_user.rs  login.rs  register.rs  update.rs
