[package]
name = "conduit"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[dependencies]
blob-uuid = "0.4.0"
chrono = "0.4.10"
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
jsonwebtoken = "7.0.1"
once_cell = "1.3.1"
regex = "1.3.4"
serde = "1.0.91"
serde_derive = "1.0.104"
serde_json = "1.0.48"
slug = "0.1.4"
snafu = "0.6.2"
tokio = { version = "0.2.11", features = ["macros"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
validator = "0.10.0"
validator_derive = "0.10.0"
# warp = "0.2.1"
warp = { git = "https://github.com/cjbassi/warp", branch = "error" }

db = { package = "realworld-db", path = "./src/db" }
domain = { package = "realworld-domain", path = "./src/domain" }
log = "0.4.8"
serde_urlencoded = "0.6.1"
