[package]
name = "conduit"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
jsonwebtoken = "7.0.1"
serde = "1.0.91"
serde_derive = "1.0.104"
tokio = { version = "0.2.11", features = ["macros"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
# warp = "0.2.1"
warp = { git = "https://github.com/cjbassi/warp", branch = "error" }

db = { package = "realworld-db", path = "./src/db" }
domain = { package = "realworld-domain", path = "./src/domain" }
